--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                           This is Shahabuddin ahmed utsho. I am a student of 
                           Hajee Mohammad Danesh Science and Technology Unuversity.
-                          Dept of ECE .Faculty of CSE.Level :4 ,Demester:I, Session :2017
+                          Dept of ECE .Faculty of CSE.Level :4 ,Semester:I, Session :2017
                           I want to be a communication engineering.I like photography.
                         
 
