--- a/result1.html
+++ b/result1.html
@@ -9,7 +9,7 @@
  <tr bgcolor="white" align="center">
 
 	<th>Level</th>
-	<th>Semister</th>
+	<th>Semester</th>
 	<th>Cgpa</th>
 </tr>
 <tr  align="center">
