--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                           This is Shahabuddin ahmed utsho. I am a student of 
                           Hajee Mohammad Danesh Science and Technology Unuversity.
                           Dept of ECE .Faculty of CSE.Level :4 ,Semester:I, Session :2017
-                          I want to be a communication engineer.I like photography.
+                          I want to be a Communication Engineer.I like photography.
                         
 
                           My contact info
