--- a/aim.html
+++ b/aim.html
@@ -6,7 +6,7 @@
 <body>
 	<center><br>
 		<br><br>
-<h2>I want to be communication engineer and want to be a part time photographer.</h2>
+<h2>I want to be Communication Engineer and want to be a part time photographer.</h2>
 </center>
 </body>
 </html>
